# ECU-optimization-toolset

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: damos_pointers.md  ecu_optimizer_prompt.md  platform_amf.md  rules.md  specification.md  v3_egr_delete_spec.md
src/: disclaimer.rs  error.rs  lib.rs  main.rs
src/ingest/: canonicalize.rs  dtc.rs  mod.rs  vcds.rs
src/platform/: mod.rs
src/platform/amf_edc15p/: channels.rs  default_deltas.rs  egr.rs  envelope.rs  maps.rs  mod.rs  stock_refs.rs
src/recommend/: engine.rs  mod.rs  report.rs
src/rules/: base.rs  mod.rs  pack.rs  runner.rs
src/util/: mod.rs  pulls.rs  timebase.rs
src/validate/: egr_delete.rs  mod.rs
tests/: integration_audit.rs  integration_channels_audit.rs  integration_dispatch.rs  integration_driveability_thermal.rs  integration_dtc.rs  integration_egr.rs  integration_engine.rs  integration_envelope.rs  integration_grep_gate.rs  integration_invariants.rs  integration_pulls.rs  integration_rules.rs  integration_v4_invariants.rs  integration_vcds.rs
tests/fixtures/: vcds_amf_001_003_011.csv  vcds_amf_008_011.csv  vcds_amf_020_021.csv  vcds_amf_post_delete.csv  vcds_amf_post_delete.dtc.txt  vcds_amf_pre_delete.csv  vcds_amf_pre_delete.dtc.txt
