[package]
name = "ecu-shenanigans"
version = "4.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["Flamchu"]
description = "VCDS datalog analyzer + sane Stage 1 recommendation engine for Skoda Fabia AMF / EDC15P+ (Garrett GT1544S)"
license = "MIT"
repository = "https://github.com/Flamchu/ecu-shenanigans"
readme = "README.md"

[lib]
name = "ecu_shenanigans"
path = "src/lib.rs"

[[bin]]
name = "ecu-shenanigans"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = "2.0"

[dev-dependencies]
proptest = "1.5"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = 0 }
